wrap fix

--- a/walk/static/styles/style.css
+++ b/walk/static/styles/style.css
@@ -57,13 +57,8 @@ li {
   text-transform: uppercase;
 }
 
-.main-cover {
-  display: flex;
-}
 .main {
   margin-top: 55px; 
-  display: flex;
-  justify-content: center;
   text-align: center;
 }
 
